# de-utils

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: compliance-audit.yml
docs/: README.md  compliance-setup.md  enablement-playbook.md  gh-prs-md-README.md  gh-prs-md.md  gh-recent-commits-README.md  gh-recent-commits.md  gh-uncommitted-md-README.md  implementation-summary.md  org-communications-action-items.md  org-communications-implementation-guide.md  org-communications-notion-template.md  org-communications-rollout.md  org-communications-summary.md  org-communications-template.md  release-manifest-structure.md  rulesets-guide.md  standard-files-templates.md
src/: gh-prs-md  gh-recent-commits
src/compliance/: README.md  __init__.py  audit.py  branch_hygiene.py  checks.py  config.yaml  gh_api.py  notion_api.py  requirements.txt  setup_notion_dbs.py
src/gh-shortcuts/: gh-prs-md  gh-recent-commits  gh-uncommitted-md
